[metadata]
name = asyncapi-docgen
version = 0.0.1
author = Manuel Stingl
author_email = opensource@voltane.eu
description = AsyncAPI Documentation Generator
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Topic :: Utilities
    # Development Status :: 5 - Production/Stable
url = https://github.com/Voltane-EU/asyncapi-docgen

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    pydantic >= 1.9.0
